# Gigabyte_project

./: README.md  eval_questions.json  evaluate.py  pyproject.toml
data/: raw_spec.txt
eval/: eval_questions.json  evaluate.py
src/: answer.py  config.py  main.py  parse_data.py  retrieve.py
