[project]
name = "gigabyte-rag"
version = "0.1.0"
description = "Pure Python RAG system for GIGABYTE AORUS MASTER 16 AM6H under 4GB VRAM constraint"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.23.0"
]

[tool.uv]
dev-dependencies = []
